<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.InputFragment">

    <Button
        android:enabled="false"
        android:id="@+id/button_submit"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginHorizontal="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_submit"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_time_in_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/time_in"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_time_in"
                android:layout_marginStart="7dp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_time_in_label"
                tools:text="12:27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TimePicker
                android:layout_alignParentEnd="true"
                android:id="@+id/time_in_picker"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:padding="3dp"
                android:timePickerMode="spinner" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mileage_in"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/miles_in"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_miles_in"
                android:layout_centerHorizontal="true"
                android:inputType="numberSigned"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <Button
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:id="@+id/btn_punch_in"
                android:textSize="17sp"
                android:backgroundTint="#aa0000"
                android:layout_width="30dp"
                android:layout_height="50dp" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/initial_stops"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:textAlignment="textStart"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/initial_pkgs"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/et_initial_stops"
                android:inputType="numberSigned"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/et_initial_pkgs"
                android:inputType="numberSigned"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_alignParentStart="true"
                android:id="@+id/tv_time_out_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/time_out"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_time_out"
                android:layout_marginStart="7dp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_time_out_label"
                tools:text="19:27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TimePicker
                android:layout_alignParentEnd="true"
                android:id="@+id/time_out_picker"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:padding="3dp"
                android:timePickerMode="spinner" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/tv_mileage_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/miles_out"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_centerHorizontal="true"
                android:id="@+id/et_miles_out"
                android:inputType="numberSigned"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/btn_punch_out"
                android:textSize="17sp"
                android:backgroundTint="#aa0000"
                android:layout_width="30dp"
                android:layout_height="50dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="7dp"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/actual_stops"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:textAlignment="textStart"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/actual_pkgs"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/et_actual_stops"
                android:inputType="numberSigned"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/et_actual_pkgs"
                android:inputType="numberSigned"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>